--- a/src/app/software/component/activity-sold-unit-detail/activity-sold-unit-detail.component.html
+++ b/src/app/software/component/activity-sold-unit-detail/activity-sold-unit-detail.component.html
@@ -482,7 +482,7 @@
                                         (focus)="onFocusNumberRemoveCommas('soldUnitDownpaymentValue')"
                                         (blur)="onaBlurNumberAddCommas(soldUnitDownpaymentValue, 'soldUnitDownpaymentValue')"
                                         (keyup)="onKeyUpComputeAmount($event, 'soldUnitDownpaymentValue')"
-                                        style="text-align: right;" disabled>
+                                        style="text-align: right;">
                                 </mat-form-field>
                             </div>
                         </div>
@@ -511,7 +511,7 @@
                                         (focus)="onFocusNumberRemoveCommas('soldUnitEquityValue')"
                                         (blur)="onaBlurNumberAddCommas(soldUnitEquityValue, 'soldUnitEquityValue')"
                                         (keyup)="onKeyUpComputeAmount($event, 'soldUnitEquityValue')"
-                                        style="text-align: right;" disabled>
+                                        style="text-align: right;">
                                 </mat-form-field>
                             </div>
                         </div>
